--- a/menu.html
+++ b/menu.html
@@ -5,9 +5,15 @@
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+          <link type="text/css" rel="stylesheet" href="palette.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <style type="text/css">
+      	.collapsible-header{
+      		height: 100px;	
+      	}
+      </style>
     </head>
 
     <body>
@@ -15,17 +21,55 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 
-      <nav>
+    <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#!" class="brand-logo left">Logo</a>
       <ul class="right">
         <li><a href="sass.html"><i class="material-icons">shopping_cart</i></a></li>
-        <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-        <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-        <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+        <li><a href="badges.html"><i class="material-icons">perm_identity</i></a></li>
       </ul>
     </div>
   </nav>
+
+   <ul class="collapsible" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header default-primary-color">Appetizers</div>
+      <div class="collapsible-body">
+      	
+      	  <ul class="collapsible" data-collapsible="accordion">
+		    <li>
+		      <div class="collapsible-header">Mushroom Soup</div>
+		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+		    </li>
+		    <li>
+		      <div class="collapsible-header">Mozza</div>
+		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+		    </li>
+		    <li>
+		      <div class="collapsible-header">Main Course</div>
+		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+		    </li>
+		    <li>
+		      <div class="collapsible-header">Desserts</div>
+		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+		    </li>
+		  </ul>
+
+      </div>
+    </li>
+    <li>
+      <div class="collapsible-header default-primary-color">Entree</div>
+      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+    </li>
+    <li>
+      <div class="collapsible-header default-primary-color">Main Course</div>
+      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+    </li>
+    <li>
+      <div class="collapsible-header default-primary-color">Desserts</div>
+      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+    </li>
+  </ul>
 
     </body>
   </html>
