--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo left">Logo</a>
       <ul class="right">
-        <li><a href="sass.html"><i class="material-icons">shopping_cart</i></a></li>
+        <li><a href="sass.html" class="disabled"><i class="material-icons">shopping_cart</i></a></li>
         <li><a href="badges.html"><i class="material-icons">perm_identity</i></a></li>
       </ul>
     </div>
