--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,8 @@
 
       <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
+       <a href="#!" class="left">Logo</a>
+      
       <ul class="right">
         <li><a href="sass.html"><i class="material-icons">shopping_cart</i></a></li>
         <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
