--- a/menu.html
+++ b/menu.html
@@ -25,51 +25,67 @@
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo left">Logo</a>
       <ul class="right">
-        <li><a href="sass.html"><i class="material-icons">shopping_cart</i></a></li>
-        <li><a href="badges.html"><i class="material-icons">perm_identity</i></a></li>
+        <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
+        <li><a href="#"><i class="material-icons">perm_identity</i></a></li>
       </ul>
     </div>
   </nav>
 
+  
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
+
+
+
    <ul class="collapsible" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header default-primary-color">Appetizers</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/potato-wedge.png'); background-size: 100%">Starters</div>
       <div class="collapsible-body">
       	
-      	  <ul class="collapsible" data-collapsible="accordion">
-		    <li>
-		      <div class="collapsible-header">Mushroom Soup</div>
-		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-		    </li>
-		    <li>
-		      <div class="collapsible-header">Mozza</div>
-		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-		    </li>
-		    <li>
-		      <div class="collapsible-header">Main Course</div>
-		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-		    </li>
-		    <li>
-		      <div class="collapsible-header">Desserts</div>
-		      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-		    </li>
-		  </ul>
+      	 <div class="row">
+        <div class="col s12 m3">
+          <div class="card">
+            <div class="card-image">
+              <div style="background-image:url(img/potato-wedge.png);height:100px; background-size: cover;"></div>
+              <span class="card-title">Card Titldfas;dkfjadfkjad;fklje</span>
+            </div>
+            <div class="card-content">
+              <p style="padding:0px;">I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+             <a class="waves-effect waves-light btn modal-trigger" onClick="$('#modal1').openModal();return false;" href="#modal1">Modal</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
       </div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color">Entree</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/raviolli-lasagna.png'); background-size: 100%">Entree</div>
       <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color">Main Course</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/creamy-buffalo-wings.png'); background-size: 100%">Main Course</div>
       <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color">Desserts</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/ultimate-chocolate-cake.png'); background-size: 100%">Desserts</div>
       <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
     </li>
   </ul>
+
+
 
     </body>
   </html>
