--- a/cart.html
+++ b/cart.html
@@ -74,9 +74,10 @@
             </table>
             
             <div id="order_id" class="card-panel col s12">
-                <button class="btn waves-effect waves-light center-align" type="submit" name="action">Submit
+               <a href="verify.html"> <button class="btn waves-effect waves-light center-align" type="submit" name="action">Submit
                     <i class="material-icons right">done</i>
                 </button>
+                </a>
             </div>
         </div>
     </body>
