--- a/menu.html
+++ b/menu.html
@@ -36,11 +36,23 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <h4>Add to Cart</h4>
+      Quantity:
+       <ul class="pagination">
+    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+    <li id="num" class="active"><a href="#!">1</a></li>
+    <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+
+    <script>
+    	function add() {
+    		$('#num').html($('#num').html().parseInt()+1);
+    	}
+    </script>
+  </ul>
+      
     </div>
     <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      <a href="#!"  onClick="$('#modal1').closeModal();return false;"  class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
     </div>
   </div>
 
@@ -48,7 +60,7 @@
 
    <ul class="collapsible" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/potato-wedge.png'); background-size: 100%">Starters</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/potato-wedge.png'); background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Starters</div>
       <div class="collapsible-body">
       	
       	 <div class="row">
@@ -63,7 +75,7 @@
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-             <a class="waves-effect waves-light btn modal-trigger" onClick="$('#modal1').openModal();return false;" href="#modal1">Modal</a>
+             <a class="waves-effect waves-light btn modal-trigger" onClick="$('#modal1').openModal();return false;" href="#modal1">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -72,15 +84,15 @@
       </div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/raviolli-lasagna.png'); background-size: 100%">Entree</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/raviolli-lasagna.png'); background-size: 100% background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Entree</div>
       <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/creamy-buffalo-wings.png'); background-size: 100%">Main Course</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/creamy-buffalo-wings.png'); background-size: 100% background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Main Course</div>
       <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/ultimate-chocolate-cake.png'); background-size: 100%">Desserts</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/ultimate-chocolate-cake.png'); background-size: 100% background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Desserts</div>
       <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
     </li>
   </ul>
