--- a/chef/index.html
+++ b/chef/index.html
@@ -48,6 +48,8 @@ limitations under the License
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.cyan-light_blue.min.css">
 <link rel="stylesheet" href="styles.css">
+<script src="jquery.min.js"></script>
+<script src="circle-progress.js"></script>
 <style>
 #view-source {
 	position: fixed;
@@ -88,15 +90,15 @@ limitations under the License
 		<div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
 			<header class="demo-drawer-header">
 				<div class="demo-avatar-dropdown">
-					<span>Christopher Bill Zuckerberg</span>
+					<span>Chef TJ Monsi</span>
 					<div class="mdl-layout-spacer"></div>
 					<button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
 						<i class="material-icons" role="presentation">arrow_drop_down</i>
 						<span class="visuallyhidden">Accounts</span>
 					</button>
 					<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-						<li class="mdl-menu__item">hello@example.com</li>
-						<li class="mdl-menu__item">info@example.com</li>
+						<li class="mdl-menu__item">Chef</li>
+						<li class="mdl-menu__item">Manager</li>
 						<li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
 					</ul>
 				</div>
@@ -111,34 +113,28 @@ limitations under the License
 			<div class="mdl-grid demo-content">
 				<div class="mdl-grid mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
 					<div class="mdl-grid mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--12-col">
-						<svg fill="currentColor" width="100px" height="100px" viewBox="0 0 1 1" class="a mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-							<use xlink:href="#piechart" mask="url(#piemask)" />
-							<text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan font-size="0.2" dy="-0.07">%</tspan></text>
-						</svg>
+						<div id="c1" style="width:100px;height:100px;margin:3px 20px" class="first circle"><strong></strong></div>
 						<div class="mdl-cell mdl-cell--8-col">
-							<h2 class="mdl-card__title-text">Beef Ramen</h2>
+							<h2 class="mdl-card__title-text">Tiramisu</h2>
 							<div class="mdl-color-text--grey-600">
-								Cooking this recipe includes creation and cooking of noodles, boiling of broth, cutting of boiled egg, and adding beef meat slices.
+								Involves assembly by hand of multiple ingredients.
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
 								<span class="tag important">High Priority</span>
-								<span class="tag broth">Broth</span>
+								<span class="tag broth">Non-concurrent</span>
 							</div>
 						</div>
 					</div>
 					<div class="mdl-grid mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--12-col">
-						<svg fill="currentColor" width="100px" height="100px" viewBox="0 0 1 1" class="b mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-							<use xlink:href="#piechart" mask="url(#piemask)" />
-							<text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan font-size="0.2" dy="-0.07">%</tspan></text>
-						</svg>
+						<div id="c2" style="width:100px;height:100px;margin:3px 20px" class="first circle"><strong></strong></div>
 						<div class="mdl-cell mdl-cell--8-col">
-							<h2 class="mdl-card__title-text">Yakisoba</h2>
+							<h2 class="mdl-card__title-text">Mozzarella Cheese x3</h2>
 							<div class="mdl-color-text--grey-600">
-								Cooking this recipe includes frying of flat noodles, mixing of sauce, cutting of boiled egg, and adding chicken meat slices.
+								Cut Mozzarella cheese into smaller slices and garnish with spices.
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
 								<span class="tag delayable">Delayable</span>
-								<span class="tag broth">Yakisoba Sauce</span>
+								<span class="tag broth">Concurrent</span>
 							</div>
 						</div>
 					</div>
@@ -160,18 +156,22 @@ limitations under the License
 			</div>
 		</main>
 	</div>
-	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
-		<defs>
-			<mask id="piemask" maskContentUnits="objectBoundingBox">
-				<circle cx=0.5 cy=0.5 r=0.49 fill="white" />
-				<circle cx=0.5 cy=0.5 r=0.40 fill="black" />
-			</mask>
-			<g id="piechart">
-				<circle cx=0.5 cy=0.5 r=0.5 />
-				<path d="M 0.5 0.5 0.5 0 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)" />
-			</g>
-		</defs>
-	</svg>
 	<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+	<script>
+	$('#c1').circleProgress({
+	    value: 0.85,
+	    animation: true,
+	    fill: { gradient: ['#ff1e41', '#ff5f43'] }
+	}).on('circle-animation-progress', function(event, progress) {
+	    $(this).find('strong').html(parseInt(100 * 0.85 * progress) + '<i>%</i>');
+	});
+	$('#c2').circleProgress({
+	    value: 0.25,
+	    animation: true,
+	    fill: { gradient: ['#1eff41', '#5fff43'] }
+	}).on('circle-animation-progress', function(event, progress) {
+	    $(this).find('strong').html(parseInt(100 * 0.25 * progress) + '<i>%</i>');
+	});
+	</script>
 </body>
 </html>
