Final Commit For Demo

--- a/game.html
+++ b/game.html
@@ -1,43 +1,66 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-          <link type="text/css" rel="stylesheet" href="palette.css"  media="screen,projection"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>Starter Template - Materialize</title>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <style type="text/css">
-      	.collapsible-header{
-      		height: 100px;	
-      	}
-      </style>
-    </head>
-
-    <body>
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="materialize/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  
+</head>
+<body onload="updateTimeDisplay(180)">
+    
     <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo left">Logo</a>
-      <ul class="right">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo left">Project SeraS</a>
+        <ul id="nav-mobile" class="right">
+        <li><a href="shopping-cart.html"><i class="material-icons">shopping_cart</i></a></li>
+        <li>Time left: <span id="time"></span></li>
+
+        </ul>
+      </div>
+    </nav>
+    <div class="chip order_id">Order ID: 995231047</div>
+    <div class="col s12">
       
-      </ul>
+      <div class="gameplayer" data-sub="cdn" data-width="845" data-height="477" data-gid="576742227280293053"></div>
+<script>
+(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'http://cdn.gameplayer.io/api/js/publisher.js'; fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'gameplayer-publisher'));
+ </script>
     </div>
-  </nav>
 
-   <div class="row">
-        <div class="col s12 m6">
-         <div class="gameplayer" data-sub="cdn" data-width="640" data-height="360" data-gid="576742227280293053"></div>
-        <script>
-        (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'http://cdn.gameplayer.io/api/js/publisher.js'; fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'gameplayer-publisher'));
-         </script>
-        </div>
-   </div>
 
-    </body>
-  </html>
+<!--
+<script>
+d = new Date();
+document.getElementById("hour").innerHTML = d.getHours();
+document.getElementById("minute").innerHTML = d.getMinutes();
+</script>-->
+<script>
+var displayArea = document.getElementById("time");
+
+// conver number num to string, pad 0 in front to make it 2 digits
+function format(num) {
+    var numStr = num.toString();
+    if (numStr.length === 1) {
+        return "0" + numStr;
+    } else {
+        return numStr;
+    }
+}
+
+function updateTimeDisplay(dd) {
+    var mm, ss;
+    setInterval(function(){
+        mm = Math.floor(dd/60);
+        ss = dd%60;
+        displayArea.textContent = format(mm) + ":" + format(ss);
+        dd--;
+    }, 1000);
+}
+</script>
+</body>
+</html>
