--- a/waiter.html
+++ b/waiter.html
@@ -21,7 +21,7 @@
 
     <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo center">Logo</a>
+      <a href="#!" class="brand-logo center">Project SeraS</a>
       <ul class="right">
       
       </ul>
