--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
 
     <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo left">Logo</a>
+      <a href="#!" class="brand-logo left">Project SeraS</a>
       <ul class="right">
         <li><a href="sass.html" class="disabled"><i class="material-icons">shopping_cart</i></a></li>
         <li><a href="badges.html"><i class="material-icons">perm_identity</i></a></li>
@@ -74,7 +74,7 @@
             </table>
             
             <div id="order_id" class="card-panel col s12">
-               <a href="verify.html"> <button class="btn waves-effect waves-light center-align" type="submit" name="action">Submit
+               <a href="game.html"> <button class="btn waves-effect waves-light center-align" type="submit" name="action">Submit
                     <i class="material-icons right">done</i>
                 </button>
                 </a>
