--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,10 @@
 
     <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo left">Logo</a>
+      <a href="#!" class="brand-logo left">
+          <img src="./Menu pictures/projectseraslogo.png">
+      </a>
+      
       <ul class="right">
         <li><a href="sass.html" class="disabled"><i class="material-icons">shopping_cart</i></a></li>
         <li><a href="badges.html"><i class="material-icons">perm_identity</i></a></li>
