--- a/menu.html
+++ b/menu.html
@@ -60,7 +60,7 @@
 
    <ul class="collapsible" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/potato-wedge.png'); background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Starters</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/potato-wedge.png'); background-size: 100%; color: white; font-size: 20px; text-shadow: 0px 2px 10px rgba(0,0,0,0.8);">Starters</div>
       <div class="collapsible-body">
       	
       	 <div class="row">
@@ -96,7 +96,7 @@
       </div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/raviolli-lasagna.png'); background-size: 100% background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Entree</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/raviolli-lasagna.png'); background-size: 100% background-size: 100%; color: white; font-size: 20px; text-shadow: 0px 2px 10px rgba(0,0,0,0.8);">Entree</div>
       <div class="collapsible-body">
       	  	 <div class="row">
         <div class="col s12 m3">
@@ -132,7 +132,7 @@
       </div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/creamy-buffalo-wings.png'); background-size: 100% background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Main Course</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/creamy-buffalo-wings.png'); background-size: 100% background-size: 100%; color: white; font-size: 20px; text-shadow: 0px 2px 10px rgba(0,0,0,0.8);">Main Course</div>
       <div class="collapsible-body">
       			 <div class="row">
 	        <div class="col s12 m3">
@@ -167,7 +167,7 @@
       </div>
     </li>
     <li>
-      <div class="collapsible-header default-primary-color" style="background-image: url('img/ultimate-chocolate-cake.png'); background-size: 100% background-size: 100%; color: black; font-size: 20px; text-shadow: 5px 5px 5px black;">Desserts</div>
+      <div class="collapsible-header default-primary-color" style="background-image: url('img/ultimate-chocolate-cake.png'); background-size: 100% background-size: 100%; color: white; font-size: 20px; text-shadow: 0px 2px 10px rgba(0,0,0,0.8);">Desserts</div>
       <div class="collapsible-body">
       	
       	  <div class="row">
