--- a/game.html
+++ b/game.html
@@ -26,7 +26,8 @@
     <div class="chip order_id">Order ID: 995231047</div>
     <div class="col s12">
       
-      <div class="gameplayer" data-sub="cdn" data-width="845" data-height="477" data-gid="576742227280293053"></div>
+
+      <div class="gameplayer" data-sub="cdn" data-width="100%" data-height="100%" data-gid="576742227280293053"></div>
 <script>
 (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'http://cdn.gameplayer.io/api/js/publisher.js'; fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'gameplayer-publisher'));
  </script>
