--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,9 @@
       	.collapsible-header{
       		height: 100px;	
       	}
+      	.card-title{
+      		text-shadow:0px 0px 10px rgba(0,0,0,0.8);
+      	}
       </style>
     </head>
 
@@ -23,7 +26,7 @@
 
     <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo left">Project SeraS</a>
+      <a href="#!" class="brand-logo left"> <img src="SERAS_logo2.png" style="height: 60px;"/></a>
       <ul class="right">
         <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
         <li><a href="#"><i class="material-icons">perm_identity</i></a></li>
@@ -77,8 +80,9 @@
              <a class="waves-effect waves-light btn modal-trigger" onClick="$('#modal1').openModal();return false;" href="#modal1">Add to Cart</a>
             </div>
           </div>
+          </div>
        
-
+<div class="col s12 m3">
         <div class="card">
             <div class="card-image">
               <div style="background-image:url(img/potato-wedge.png);height:100px; background-size: cover;"></div>
