--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
     
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo left">Project SeraS</a>
+        <a href="#" class="brand-logo left"><img src="SERAS_logo2.png" style="height: 60px;"/></a>
         <ul id="nav-mobile" class="right">
         <li><a href="shopping-cart.html"><i class="material-icons">shopping_cart</i></a></li>
         <li>Time left: <span id="time"></span></li>
