--- a/table.html
+++ b/table.html
@@ -25,7 +25,7 @@
 
     <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo center">Project SeraS</a>
+      <a href="#!" class="brand-logo center"><img src="SERAS_logo2.png" style="height: 60px;"/></a>
       <ul class="right">
       
       </ul>
