--- a/verify.html
+++ b/verify.html
@@ -23,7 +23,7 @@
 
     <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo left">Project SeraS</a>
+      <a href="#!" class="brand-logo left"><img src="SERAS_logo2.png" style="height: 60px;"/></a>
       <ul class="right">
         <li><a href="sass.html"><i class="material-icons">shopping_cart</i></a></li>
         <li><a href="badges.html"><i class="material-icons">perm_identity</i></a></li>
