Updated to latest with fixes

--- a/cart.html
+++ b/cart.html
@@ -43,32 +43,32 @@
                     <tr>
                         <td>Prosciutto &#38; walnut salad</td>
                         <td class="center-align">1</td>
-                        <td>&#8369; 130.00</td>
-                        <td>&#8369; 130.00</td>
+                        <td>&#8369;&nbsp;130.00</td>
+                        <td>&#8369;&nbsp;130.00</td>
                     </tr>
                     <tr>
                         <td>Lasagna</td>
                         <td class="center-align">2</td>
-                        <td>&#8369; 170.00</td>
-                        <td>&#8369; 340.00</td>
+                        <td>&#8369;&nbsp;170.00</td>
+                        <td>&#8369;&nbsp;340.00</td>
                     </tr>
                     <tr>
                         <td>Raviolli</td>
                         <td class="center-align">1</td>
-                        <td>&#8369; 200.00</td>
-                        <td>&#8369; 200.00</td>
+                        <td>&#8369;&nbsp;200.00</td>
+                        <td>&#8369;&nbsp;200.00</td>
                     </tr>
                     <tr>
                         <td>5-spice Pork Spare Ribs</td>
                         <td class="center-align">1</td>
-                        <td>&#8369; 340.00</td>
-                        <td>&#8369; 340.00</td>
+                        <td>&#8369;&nbsp;340.00</td>
+                        <td>&#8369;&nbsp;340.00</td>
                     </tr>
                     <tr id="grandTotal" class="grey darken-2 white-text text-lighten-2">
                         <td>Grand Total</td>
                         <td></td>
                         <td></td>
-                        <td>&#8369; 1010.00</td>
+                        <td>&#8369;&nbsp;1010.00</td>
                     </tr>
                 </tbody>
             </table>
