--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
         <a href="#" class="brand-logo left"><img src="SERAS_logo2.png" style="height: 60px;"/></a>
         <ul id="nav-mobile" class="right">
         <li><a href="shopping-cart.html"><i class="material-icons">shopping_cart</i></a></li>
-        <li>Time left: <span id="time"></span></li>
+        <li style="padding:0px 10px">Time left: <span id="time"></span></li>
 
         </ul>
       </div>
